# nonebot-plugin-anime-notification

./: .pdm-python  README.md  pyproject.toml
nonebot_plugin_anime_notification/: __init__.py  config.py  data_source.py  maps.py  notice.py  utils.py
nonebot_plugin_anime_notification/api/: __init__.py  jikan.py  myanimelist.py
nonebot_plugin_anime_notification/models/: myanimelist.py
